--- a/model_bahawioralny.ipynb
+++ b/model_bahawioralny.ipynb
@@ -31,8 +31,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. Import bibliotek użytych w projekcie"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,74 +165,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          Marka                  Model Producent_CPU  Rdzenie  Taktowanie  \\\n",
-      "0          DELL                   7400         Intel      4.0         3.9   \n",
-      "1            MS         surface book 2         intel      4.0         4.2   \n",
-      "2          Acer                swift 3        intel       4.0         3.6   \n",
-      "3           MSI                   gl75         intel      6.0         4.5   \n",
-      "4        Lenovo          thinkpad t470         intel      2.0         3.1   \n",
-      "5            MS         surface book 3         intel      4.0         3.7   \n",
-      "6       Huawei            matebook d14           amd      4.0         3.7   \n",
-      "7   Macbook Air                   2017         intel      4.0         3.5   \n",
-      "8       Lenovo   Legion Y740-15IRHg i7         intel      6.0         4.5   \n",
-      "9         Asus         ZenBook ux333fn         intel      4.0         4.6   \n",
-      "10          HP        EliteBook 840 G6         intel      4.0         4.6   \n",
-      "11          MSI            Prestige 14         intel      6.0         4.7   \n",
-      "12       Lenovo           thinkpad l15        intel       4.0         4.2   \n",
-      "13       Lenovo          thinkpad t495           amd      4.0         3.7   \n",
-      "14         DELL         precition 3551        intel       6.0         5.1   \n",
-      "15         DELL            vostro 5501        intel       4.0         3.6   \n",
-      "\n",
-      "    Szerokosc  Wysokosc    SSD   RAM  Czas_baterii     Cena  Gwarancja  \\\n",
-      "0      1980.0    1080.0  256.0  16.0          13.0   8299.0       36.0   \n",
-      "1      3000.0    2000.0  256.0   8.0          17.0   7399.0       12.0   \n",
-      "2      1920.0    1080.0  512.0   8.0          13.0   3200.0       24.0   \n",
-      "3      1920.0    1080.0  256.0   8.0           4.0   4549.0       24.0   \n",
-      "4      1920.0    1080.0  256.0  16.0          17.0   4049.0       36.0   \n",
-      "5      3000.0    2000.0  256.0   8.0          12.0   8199.0       12.0   \n",
-      "6      1920.0    1080.0  256.0   8.0           9.5   2699.0       24.0   \n",
-      "7      2560.0    1600.0  256.0   8.0          11.0   5399.0       12.0   \n",
-      "8      1920.0    1080.0  512.0  16.0           6.0   7299.0       24.0   \n",
-      "9      1920.0    1080.0  512.0   8.0          14.0   5099.0       24.0   \n",
-      "10     1920.0    1080.0  960.0  32.0          10.0   7699.0       36.0   \n",
-      "11     1920.0    1080.0  512.0  16.0          10.0   5099.0       24.0   \n",
-      "12     1920.0    1080.0  512.0  16.0          14.0   5099.0       24.0   \n",
-      "13     1920.0    1080.0  256.0   8.0          15.0   5699.0       36.0   \n",
-      "14     1920.0    1080.0  512.0  16.0          20.0  10499.0       36.0   \n",
-      "15     1920.0    1080.0  512.0  16.0           4.0   4399.0       36.0   \n",
-      "\n",
-      "                           GPU_typ  Ocena  Przekatna  Dodatkowa  \n",
-      "0                     zintegrowana    1.0       14.0        NaN  \n",
-      "1                         GTX 1050    4.0       13.0        NaN  \n",
-      "2                     zintegrowana    1.0       14.0        NaN  \n",
-      "3                       gtx 1660Ti    6.0       17.0        NaN  \n",
-      "4                     zintegrowana    1.0       14.0        NaN  \n",
-      "5                     zintegrowana    2.0       13.0        NaN  \n",
-      "6                     zintegrowana    2.0       14.0        NaN  \n",
-      "7                     zintegrowana    1.0       13.0        NaN  \n",
-      "8   NVIDIA GeForce RTX 2070 Max-Q     7.0       15.6        NaN  \n",
-      "9             NVIDIA GeForce MX150    2.0       13.3        NaN  \n",
-      "10                    zintegrowana    1.0       14.0        NaN  \n",
-      "11            NVIDIA GeForce MX330    2.5       14.0        NaN  \n",
-      "12                    zintegrowana    2.0       15.0        NaN  \n",
-      "13               AMD Radeon Vega 7    2.0       14.0        NaN  \n",
-      "14              NVIDIA Quadro P619    3.0       15.0        NaN  \n",
-      "15                    zintegrowana    1.0       15.0        NaN  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Wczytanie danych\n",
-    "laptops = read_data()\n",
+    "# ===========================================\n",
+    "# 2. Funkcja TOPSIS (bez zmian)\n",
+    "# ===========================================\n",
+    "def topsis(df, weights, beneficial_cols, cost_cols):\n",
+    "    \"\"\"\n",
+    "    Oblicza ranking metodą TOPSIS.\n",
+    "    df: DataFrame z kolumnami-kryteriami.\n",
+    "    weights: tablica wag (float) długości liczby kolumn w df.\n",
+    "    beneficial_cols: kolumny, gdzie więcej = lepiej.\n",
+    "    cost_cols: kolumny, gdzie mniej = lepiej.\n",
+    "    \"\"\"\n",
+    "    data = df.values.astype(float)\n",
+    "    m, n = data.shape\n",
     "\n",
-    "print(laptops)"
+    "    # Normalizacja (Euklides)\n",
+    "    norm_factor = np.sqrt((data ** 2).sum(axis=0))\n",
+    "    normalized = data / norm_factor\n",
+    "\n",
+    "    # Mnożenie przez wagi\n",
+    "    weighted = normalized * weights\n",
+    "\n",
+    "    # Wyznaczenie ideału / anty-ideału\n",
+    "    ideal = np.zeros(n)\n",
+    "    worst = np.zeros(n)\n",
+    "\n",
+    "    for j, col in enumerate(df.columns):\n",
+    "        if col in beneficial_cols:\n",
+    "            ideal[j] = weighted[:, j].max()\n",
+    "            worst[j] = weighted[:, j].min()\n",
+    "        elif col in cost_cols:\n",
+    "            ideal[j] = weighted[:, j].min()\n",
+    "            worst[j] = weighted[:, j].max()\n",
+    "        else:\n",
+    "            # domyślnie: beneficial\n",
+    "            ideal[j] = weighted[:, j].max()\n",
+    "            worst[j] = weighted[:, j].min()\n",
+    "\n",
+    "    # Odległości od ideału i anty-ideału\n",
+    "    dist_ideal = np.sqrt(((weighted - ideal) ** 2).sum(axis=1))\n",
+    "    dist_worst = np.sqrt(((weighted - worst) ** 2).sum(axis=1))\n",
+    "\n",
+    "    # Wskaźnik bliskości\n",
+    "    score = dist_worst / (dist_ideal + dist_worst)\n",
+    "\n",
+    "    # Ranking (1 = najlepszy)\n",
+    "    ranking = pd.Series(score).rank(ascending=False)\n",
+    "\n",
+    "    # Zwracamy wyniki\n",
+    "    return pd.DataFrame({\"Score\": score, \"Ranking\": ranking}, index=df.index)"
    ]
   },
   {
@@ -246,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
